# biliupmgr

./: .env  .gitignore  Cargo.toml  README.md  config.example.yml
migrations/: 20220505060855_events.sql  20220505093012_uploads.sql
src/: config.rs  db.rs  lib.rs  main.rs  recorder.rs  upload.rs  webhook.rs
